...
            android:textStyle="bold"
            android:paddingLeft="20dp"
            android:textColor="#000000"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/EditProfile"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:src="@drawable/profileedit_icon"
            android:scaleType="centerInside"

...
                android:layout_height="wrap_content"
                android:text="posts"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/FollowersPage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

...
