...
        android:layout_below="@id/passwordtext"

        android:layout_marginLeft="15dp"/>


    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/forgotpassword"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="22dp"
        android:layout_marginRight="20dp"
...
