...
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="#333333"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/DoneEditing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Done"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#59442F"/>
...
